add dank emacs template (#1460)
* add dank emacs template

* prek

* prek ws

---------

Co-authored-by: bbedward <bbedward@gmail.com>

--- a/quickshell/translations/settings_search_index.json
+++ b/quickshell/translations/settings_search_index.json
@@ -2934,6 +2934,23 @@
     ]
   },
   {
+    "section": "matugenTemplateEmacs",
+    "label": "Emacs",
+    "tabIndex": 10,
+    "category": "Theme & Colors",
+    "keywords": [
+      "appearance",
+      "colors",
+      "look",
+      "matugen",
+      "scheme",
+      "style",
+      "template",
+      "theme",
+      "emacs"
+    ]
+  },
+  {
     "section": "widgetBackgroundColor",
     "label": "Widget Background Color",
     "tabIndex": 10,
