--- a/quickshell/translations/settings_search_index.json
+++ b/quickshell/translations/settings_search_index.json
@@ -812,6 +812,27 @@
     "icon": "visibility_off"
   },
   {
+    "section": "workspaceDragReorder",
+    "label": "Drag to Reorder",
+    "tabIndex": 4,
+    "category": "Workspaces",
+    "keywords": [
+      "desktop",
+      "drag",
+      "indicators",
+      "move",
+      "reorder",
+      "sort",
+      "spaces",
+      "virtual",
+      "virtual desktops",
+      "workspace",
+      "workspaces"
+    ],
+    "description": "Drag workspace indicators to reorder them",
+    "conditionKey": "isNiri"
+  },
+  {
     "section": "workspaceFocusedBorderEnabled",
     "label": "Focused Border",
     "tabIndex": 4,
@@ -1630,15 +1651,19 @@
   },
   {
     "section": "_tab_8",
-    "label": "System",
+    "label": "Printers",
     "tabIndex": 8,
     "category": "System",
     "keywords": [
+      "cups",
       "linux",
       "os",
+      "print",
+      "printers",
+      "printing",
       "system"
     ],
-    "icon": "computer",
+    "icon": "print",
     "conditionKey": "cupsAvailable"
   },
   {
@@ -2232,6 +2257,30 @@
       "window"
     ],
     "description": "Width of window border (borderpx)"
+  },
+  {
+    "section": "buttonColorMode",
+    "label": "Button Color",
+    "tabIndex": 10,
+    "category": "Theme & Colors",
+    "keywords": [
+      "accent",
+      "action",
+      "appearance",
+      "button",
+      "buttons",
+      "color",
+      "colors",
+      "colour",
+      "hue",
+      "look",
+      "primary",
+      "scheme",
+      "style",
+      "theme",
+      "tint"
+    ],
+    "description": "Color for primary action buttons"
   },
   {
     "section": "colorMode",
@@ -5688,12 +5737,71 @@
     "section": "_tab_28",
     "label": "Window Rules",
     "tabIndex": 28,
-    "category": "Settings",
+    "category": "Window Rules",
     "keywords": [
+      "floating",
+      "fullscreen",
+      "matching",
+      "opacity",
       "rules",
-      "settings",
       "window"
     ],
-    "icon": "select_window"
+    "icon": "select_window",
+    "conditionKey": "isNiri"
+  },
+  {
+    "section": "audioInputDevices",
+    "label": "Input Devices",
+    "tabIndex": 29,
+    "category": "Audio",
+    "keywords": [
+      "audio",
+      "device",
+      "devices",
+      "headphones",
+      "input",
+      "microphone",
+      "pipewire",
+      "sound",
+      "speaker",
+      "volume"
+    ],
+    "icon": "mic"
+  },
+  {
+    "section": "audioOutputDevices",
+    "label": "Output Devices",
+    "tabIndex": 29,
+    "category": "Audio",
+    "keywords": [
+      "audio",
+      "device",
+      "devices",
+      "headphones",
+      "microphone",
+      "output",
+      "pipewire",
+      "sound",
+      "speaker",
+      "volume"
+    ],
+    "icon": "volume_up"
+  },
+  {
+    "section": "_tab_29",
+    "label": "System",
+    "tabIndex": 29,
+    "category": "Audio",
+    "keywords": [
+      "audio",
+      "headphones",
+      "microphone",
+      "pipewire",
+      "sound",
+      "speaker",
+      "system",
+      "volume"
+    ],
+    "icon": "computer"
   }
 ]
